# capabilities-to-credit

./: .gitignore  LICENSE  LICENSE-DATA  Makefile  README.md  pyproject.toml
_audit/: claims.csv  final_report.md  inventory.md  secrets_trufflehog.txt
config/: countries.yaml  country_verdicts.yaml  kpi_indicators.yaml  macro_indicators.yaml  outcomes.yaml  palette.yaml  policy_events.yaml  ratings.csv  ratings_audit_trail.md
dashboard/: streamlit_app.py
dashboard/pages/: 1_country_profile.py  2_cross_country.py  3_credit_scorecard.py  4_portfolio.py  5_causal_evidence.py  6_rating_scorecard.py
outputs/tables/: cointegration_results.csv  composite_ahp_kendall.csv  composite_jackknife.csv  composite_lasso_stability.csv  composite_lasso_weights.csv  composite_score.csv  composite_weights_comparison.csv  coverage_matrix.csv  credit_bayesian_loadings.csv  credit_coefficients.csv  credit_oos_predictions.csv  credit_oos_scorecard.csv  granger_panel.csv  lp_hamilton_grid.csv  lp_hamilton_grid_kendall.csv  lp_irf.csv  portfolio_credit_aggregate.csv  portfolio_credit_factor.csv  portfolio_credit_overlay.csv  portfolio_credit_overlay_nav.csv  portfolio_long_only_nav.csv  portfolio_long_short_nav.csv  portfolio_quintile_nav.csv  portfolio_risk_decomposition.csv  portfolio_robustness_variants.csv  (+22 more)
paper/: main.tex
tests/: test_basic.py  test_bayesian_convergence.py  test_cointegration.py  test_composite_lasso.py  test_portfolio_credit.py  test_rating_change.py  test_ratings_sanity.py  test_survival.py  test_synthetic_control.py
tools/: audit_paper_claims.py  cross_check_ratings.py
(+55 files in other folders)
