[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newperformers"
version = "0.1.0"
description = "From Capabilities to Credit: Development KPIs as Causal Drivers, Priced Risk, and Tradable EM Factors"
authors = [{name = "Dan Allouche"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = [
    "emerging-markets",
    "sovereign-credit",
    "local-projections",
    "factor-investing",
    "macro-econometrics",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "pymc>=5.10",
    "arviz>=0.17",
    "sdmx1>=2.13",
    "requests>=2.31",
    "fredapi>=0.5",
    "yfinance>=0.2.40",
    "lifelines>=0.27",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "streamlit>=1.33",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "joblib>=1.3",
    "openpyxl>=3.1",
    "lxml>=5.1",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.29",
]
synth = [
    "pysyncon>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
